gen/DartFuncGrammaParser.java
// Generated from C:/Users/JohnyTwoJacket/IdeaProjects/DartParser/src/main/java\DartFuncGrammaParser.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DartFuncGrammaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOL_LITERAL=1, ABSTRACT_=2, AS_=3, ASSERT_=4, ASYNC_=5, AWAIT_=6, BREAK_=7, 
		CASE_=8, CATCH_=9, CLASS_=10, CONST_=11, CONTINUE_=12, COVARIANT_=13, 
		DEFAULT_=14, DEFERRED_=15, DO_=16, DYNAMIC_=17, ELSE_=18, ENUM_=19, EXPORT_=20, 
		EXTENDS_=21, EXTENSION_=22, EXTERNAL_=23, FACTORY_=24, FALSE_=25, FINAL_=26, 
		FINALLY_=27, FOR_=28, FUNCTION_=29, GET_=30, GTILDE_=31, HIDE_=32, IF_=33, 
		IMPLEMENTS_=34, IMPORT_=35, IN_=36, INTERFACE_=37, IS_=38, LATE_=39, LET_=40, 
		LIBRARY_=41, MIXIN_=42, NATIVE_=43, NEW_=44, NULL_=45, OF_=46, ON_=47, 
		OPERATOR_=48, PART_=49, REQUIRED_=50, RETHROW_=51, RETURN_=52, SET_=53, 
		SHOW_=54, STATIC_=55, SUPER_=56, SWITCH_=57, SYNC_=58, THIS_=59, THROW_=60, 
		TRUE_=61, TRY_=62, TYPEDEF_=63, VAR_=64, VOID_=65, WHILE_=66, WITH_=67, 
		YIELD_=68, SC=69, CO=70, A=71, AA=72, AE=73, AT=74, C=75, CIR=76, CIRE=77, 
		ME=78, MINUS=79, MM=80, NE=81, NOT=82, P=83, PC=84, PE=85, PL=86, PLE=87, 
		PLPL=88, PO=89, POE=90, PP=91, QU=92, QUD=93, QUDD=94, QUQU=95, QUQUEQ=96, 
		SE=97, SL=98, SQS=99, SQSE=100, SQUIG=101, ST=102, STE=103, D=104, DD=105, 
		DDD=106, DDDQ=107, VALUE=108, NUMBER=109, EQ=110, EG=111, CP=112, OP=113, 
		OBC=114, CBC=115, OB=116, CB=117, CMP=118, WS=119, SINGLE_LINE_COMMENT=120, 
		MULTI_LINE_COMMENT=121, IDENTIFIER=122;
	public static final int
		RULE_type = 0, RULE_parameter = 1, RULE_optionalParametr = 2, RULE_optionalParametrs = 3, 
		RULE_parameters = 4, RULE_function = 5, RULE_constructor = 6, RULE_namedConstructor = 7, 
		RULE_functionalCall = 8, RULE_statement = 9, RULE_loop = 10, RULE_if = 11, 
		RULE_block = 12, RULE_condition = 13, RULE_typeDeclaration = 14, RULE_declaration = 15, 
		RULE_assignment = 16, RULE_expression = 17, RULE_signPM = 18, RULE_signTL = 19, 
		RULE_increment = 20, RULE_term = 21, RULE_factor = 22, RULE_values = 23, 
		RULE_field = 24, RULE_getter = 25, RULE_setter = 26, RULE_class = 27, 
		RULE_classBody = 28, RULE_import_ = 29, RULE_topLavelStatement = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"type", "parameter", "optionalParametr", "optionalParametrs", "parameters", 
			"function", "constructor", "namedConstructor", "functionalCall", "statement", 
			"loop", "if", "block", "condition", "typeDeclaration", "declaration", 
			"assignment", "expression", "signPM", "signTL", "increment", "term", 
			"factor", "values", "field", "getter", "setter", "class", "classBody", 
			"import_", "topLavelStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'abstract'", "'as'", "'assert'", "'async'", "'await'", "'break'", 
			"'case'", "'catch'", "'class'", "'const'", "'continue'", "'covariant'", 
			"'default'", "'deferred'", "'do'", "'dynamic'", "'else'", "'enum'", "'export'", 
			"'extends'", "'extension'", "'external'", "'factory'", "'false'", "'final'", 
			"'finally'", "'for'", "'Function'", "'get'", "'gtilde'", "'hide'", "'if'", 
			"'implements'", "'import'", "'in'", "'interface'", "'is'", "'late'", 
			"'let'", "'library'", "'mixin'", "'native'", "'new'", "'null'", "'of'", 
			"'on'", "'operator'", "'part'", "'required'", "'rethrow'", "'return'", 
			"'set'", "'show'", "'static'", "'super'", "'switch'", "'sync'", "'this'", 
			"'throw'", "'true'", "'try'", "'typedef'", "'var'", "'void'", "'while'", 
			"'with'", "'yield'", "';'", "':'", "'&'", "'&&'", "'&='", "'@'", "','", 
			"'^'", "'^='", "'-='", "'-'", "'--'", "'!='", "'!'", "'|'", "'%'", "'%='", 
			"'+'", "'+='", "'++'", "'#'", "'|='", "'||'", "'?'", "'?.'", "'?..'", 
			"'??'", "'??='", "'/='", "'/'", "'~/'", "'~/='", "'~'", "'*'", "'*='", 
			"'.'", "'..'", "'...'", "'...?'", null, null, "'='", "'=>'", "')'", "'('", 
			"'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOL_LITERAL", "ABSTRACT_", "AS_", "ASSERT_", "ASYNC_", "AWAIT_", 
			"BREAK_", "CASE_", "CATCH_", "CLASS_", "CONST_", "CONTINUE_", "COVARIANT_", 
			"DEFAULT_", "DEFERRED_", "DO_", "DYNAMIC_", "ELSE_", "ENUM_", "EXPORT_", 
			"EXTENDS_", "EXTENSION_", "EXTERNAL_", "FACTORY_", "FALSE_", "FINAL_", 
			"FINALLY_", "FOR_", "FUNCTION_", "GET_", "GTILDE_", "HIDE_", "IF_", "IMPLEMENTS_", 
			"IMPORT_", "IN_", "INTERFACE_", "IS_", "LATE_", "LET_", "LIBRARY_", "MIXIN_", 
			"NATIVE_", "NEW_", "NULL_", "OF_", "ON_", "OPERATOR_", "PART_", "REQUIRED_", 
			"RETHROW_", "RETURN_", "SET_", "SHOW_", "STATIC_", "SUPER_", "SWITCH_", 
			"SYNC_", "THIS_", "THROW_", "TRUE_", "TRY_", "TYPEDEF_", "VAR_", "VOID_", 
			"WHILE_", "WITH_", "YIELD_", "SC", "CO", "A", "AA", "AE", "AT", "C", 
			"CIR", "CIRE", "ME", "MINUS", "MM", "NE", "NOT", "P", "PC", "PE", "PL", 
			"PLE", "PLPL", "PO", "POE", "PP", "QU", "QUD", "QUDD", "QUQU", "QUQUEQ", 
			"SE", "SL", "SQS", "SQSE", "SQUIG", "ST", "STE", "D", "DD", "DDD", "DDDQ", 
			"VALUE", "NUMBER", "EQ", "EG", "CP", "OP", "OBC", "CBC", "OB", "CB", 
			"CMP", "WS", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DartFuncGrammaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DartFuncGrammaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DartFuncGrammaParser.IDENTIFIER, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartFuncGrammaParserVisitor ) return ((DartFuncGrammaParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(DartFuncGrammaParser.IDENTIFIER, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartFuncGrammaParserVisitor ) return ((DartFuncGrammaParserVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			type();
			setState(65);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptionalParametrContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(DartFuncGrammaParser.IDENTIFIER, 0); }
		public TerminalNode EQ() { return getToken(DartFuncGrammaParser.EQ, 0); }
		public TerminalNode VALUE() { return getToken(DartFuncGrammaParser.VALUE, 0); }
		public OptionalParametrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionalParametr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).enterOptionalParametr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).exitOptionalParametr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartFuncGrammaParserVisitor ) return ((DartFuncGrammaParserVisitor<? extends T>)visitor).visitOptionalParametr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionalParametrContext optionalParametr() throws RecognitionException {
		OptionalParametrContext _localctx = new OptionalParametrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_optionalParametr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			type();
			setState(68);
			match(IDENTIFIER);
			setState(69);
			match(EQ);
			setState(70);
			match(VALUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptionalParametrsContext extends ParserRuleContext {
		public List<OptionalParametrContext> optionalParametr() {
			return getRuleContexts(OptionalParametrContext.class);
		}
		public OptionalParametrContext optionalParametr(int i) {
			return getRuleContext(OptionalParametrContext.class,i);
		}
		public List<TerminalNode> C() { return getTokens(DartFuncGrammaParser.C); }
		public TerminalNode C(int i) {
			return getToken(DartFuncGrammaParser.C, i);
		}
		public OptionalParametrsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionalParametrs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).enterOptionalParametrs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).exitOptionalParametrs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartFuncGrammaParserVisitor ) return ((DartFuncGrammaParserVisitor<? extends T>)visitor).visitOptionalParametrs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionalParametrsContext optionalParametrs() throws RecognitionException {
		OptionalParametrsContext _localctx = new OptionalParametrsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_optionalParametrs);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			optionalParametr();
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(77);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(73);
						match(C);
						setState(74);
						optionalParametr();
						}
						} 
					}
					setState(79);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> C() { return getTokens(DartFuncGrammaParser.C); }
		public TerminalNode C(int i) {
			return getToken(DartFuncGrammaParser.C, i);
		}
		public TerminalNode OB() { return getToken(DartFuncGrammaParser.OB, 0); }
		public OptionalParametrsContext optionalParametrs() {
			return getRuleContext(OptionalParametrsContext.class,0);
		}
		public TerminalNode CB() { return getToken(DartFuncGrammaParser.CB, 0); }
		public TerminalNode OBC() { return getToken(DartFuncGrammaParser.OBC, 0); }
		public TerminalNode CBC() { return getToken(DartFuncGrammaParser.CBC, 0); }
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).exitParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartFuncGrammaParserVisitor ) return ((DartFuncGrammaParserVisitor<? extends T>)visitor).visitParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parameters);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			parameter();
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(83);
						match(C);
						setState(84);
						parameter();
						}
						} 
					}
					setState(89);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				break;
			}
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==C) {
					{
					setState(92);
					match(C);
					}
				}

				}
				break;
			case 2:
				{
				setState(111);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					{
					setState(95);
					match(C);
					setState(96);
					match(OB);
					setState(97);
					optionalParametrs();
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==C) {
						{
						setState(98);
						match(C);
						}
					}

					setState(101);
					match(CB);
					}
					}
					break;
				case 2:
					{
					{
					setState(103);
					match(C);
					setState(104);
					match(OBC);
					setState(105);
					optionalParametrs();
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==C) {
						{
						setState(106);
						match(C);
						}
					}

					setState(109);
					match(CBC);
					}
					}
					break;
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DartFuncGrammaParser.IDENTIFIER, 0); }
		public TerminalNode OP() { return getToken(DartFuncGrammaParser.OP, 0); }
		public TerminalNode CP() { return getToken(DartFuncGrammaParser.CP, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode VOID_() { return getToken(DartFuncGrammaParser.VOID_, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartFuncGrammaParserVisitor ) return ((DartFuncGrammaParserVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID_:
				{
				setState(115);
				match(VOID_);
				}
				break;
			case IDENTIFIER:
				{
				setState(116);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(119);
			match(IDENTIFIER);
			setState(120);
			match(OP);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(121);
				parameters();
				}
			}

			setState(124);
			match(CP);
			setState(125);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DartFuncGrammaParser.IDENTIFIER, 0); }
		public TerminalNode OP() { return getToken(DartFuncGrammaParser.OP, 0); }
		public TerminalNode CP() { return getToken(DartFuncGrammaParser.CP, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode SC() { return getToken(DartFuncGrammaParser.SC, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).exitConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartFuncGrammaParserVisitor ) return ((DartFuncGrammaParserVisitor<? extends T>)visitor).visitConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(IDENTIFIER);
			setState(128);
			match(OP);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(129);
				parameters();
				}
			}

			setState(132);
			match(CP);
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OBC:
				{
				setState(133);
				block();
				}
				break;
			case SC:
				{
				setState(134);
				match(SC);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamedConstructorContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(DartFuncGrammaParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(DartFuncGrammaParser.IDENTIFIER, i);
		}
		public TerminalNode D() { return getToken(DartFuncGrammaParser.D, 0); }
		public TerminalNode OP() { return getToken(DartFuncGrammaParser.OP, 0); }
		public TerminalNode CP() { return getToken(DartFuncGrammaParser.CP, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode SC() { return getToken(DartFuncGrammaParser.SC, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public NamedConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namedConstructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).enterNamedConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).exitNamedConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartFuncGrammaParserVisitor ) return ((DartFuncGrammaParserVisitor<? extends T>)visitor).visitNamedConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamedConstructorContext namedConstructor() throws RecognitionException {
		NamedConstructorContext _localctx = new NamedConstructorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_namedConstructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(IDENTIFIER);
			setState(138);
			match(D);
			setState(139);
			match(IDENTIFIER);
			setState(140);
			match(OP);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(141);
				parameters();
				}
			}

			setState(144);
			match(CP);
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OBC:
				{
				setState(145);
				block();
				}
				break;
			case SC:
				{
				setState(146);
				match(SC);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionalCallContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DartFuncGrammaParser.IDENTIFIER, 0); }
		public TerminalNode OP() { return getToken(DartFuncGrammaParser.OP, 0); }
		public TerminalNode CP() { return getToken(DartFuncGrammaParser.CP, 0); }
		public ValuesContext values() {
			return getRuleContext(ValuesContext.class,0);
		}
		public FunctionalCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionalCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).enterFunctionalCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartFuncGrammaParserListener ) ((DartFuncGrammaParserListener)listener).exitFunctionalCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartFuncGrammaParserVisitor ) return ((DartFuncGrammaParserVisitor<? extends T>)visitor).visitFunctionalCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionalCallContext functionalCall() throws RecognitionException {
		FunctionalCallContext _localctx = new FunctionalCallContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionalCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(IDENTIFIER);
			setState(150);
			match(OP);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 80)) & ~0x3f) == 0 && ((1L << (_la - 80)) & 4407441752321L) != 0)) {
				{
				setState(151);
				values();
				}
			}

			setState(154);
			match(CP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
